<resources>
    <string name="app_name">ISM Teacher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="say_it">Say it...</string>
    <string name="str_class_average">Class Average</string>
    <string name="str_prev_average">Prev Average</string>
    <string name="str_with_prev_average">With Prev Average</string>
    <string name="str_need_attention">Need Attention</string>
    <string name="str_average">Average</string>
    <string name="str_grand">GRAND</string>
    <string name="str_excellent">Excellent</string>
    <string name="str_a1">A1</string>
    <string name="str_excellent_percent">80%-100%</string>
    <string name="str_verygood">Very Good</string>
    <string name="str_b2">B2</string>
    <string name="str_verygood_percent">76%-79%</string>
    <string name="str_good">Good</string>
    <string name="str_b3">B3</string>
    <string name="str_good_percent">70%-75%</string>
    <string name="str_credit">Credit</string>
    <string name="str_c4">C4</string>
    <string name="str_c4_percent">65%-69%</string>
    <string name="str_c5">C5</string>
    <string name="str_c5_percent">61%-64%</string>
    <string name="str_c6">C6</string>
    <string name="str_c6_percent">56%-60%</string>
    <string name="str_pass">Pass</string>
    <string name="str_d7">D7</string>
    <string name="str_d7_percent">49%-55%</string>
    <string name="str_d8">D8</string>
    <string name="str_d8_percent">45%-48%</string>
    <string name="str_fail">Fail</string>
    <string name="str_f9">F9</string>
    <string name="str_f9_percent">44%-Below</string>
    <string name="str_score_obtained">Score Obtained:</string>
    <string name="str_promoted_to">Promoted to:</string>
    <string name="str_viewprofile">View Profile</string>
    <string name="str_myfeeds">My Feeds</string>
    <string name="str_followers">Followers</string>
    <string name="str_myactivity">My activity</string>
    <string name="str_general_setting">General Settings</string>
    <string name="str_study_mates">Studymates</string>
    <string name="str_every_one">Every One</string>
    <string name="str_my_students">My Students</string>
    <string name="str_notifications">Notifications</string>
    <string name="strNoRecordFound">No record found</string>
    <string name="str_reply">Reply</string>
    <string name="str_messages">Messages</string>
    <string name="msg_studymate_request">Please add me to your Studymates group</string>
    <string name="studymate_requests">Studymate Requests</string>
    <string name="studymate_request">Studymate Request</string>
    <string name="respond_to_request">Respond to Request</string>
    <string name="accept_request">Accept Studymate Request?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="failed_to_execute_request">Failed to execute your request!</string>
    <string name="you_are_now_studymates">You are now Studymates.</string>
    <string name="strPrivacySetting">Privacy Setting</string>
    <string name="strNotification">Notification</string>
    <string name="strSmsAlerts">SMS Alerts</string>
    <string name="strSMSAlertsForAssignments">SMS Alerts For Assignment</string>
    <string name="strSMSAlertsForEvaluations">SMS Alerts For Evaluations</string>
    <string name="strSMSAlertsForConference">SMS Alerts For Conference</string>
    <string name="strNotificationForTags">Notification For Tags</string>
    <string name="strNotificationForNoticeBoard">Notification For Notice Board</string>
    <string name="strWhoShouldSeeMyPersonalAcademicDetails">Who should see my personal academic details?</string>
    <string name="strWhoShouldSeeMyPersonalDetails">Who should see my personal details?</string>
    <string name="strBlockStudymatesRequest">Block Studymates Request</string>
    <string name="strEmailID">Email ID</string>
    <string name="strBlockUser">Block User</string>
    <string name="strManageBlockUsers">Manage Blocked Users</string>
    <string name="strContactIsmAdmin">Contact ISM Admin</string>
    <string name="strContactAdminEmailAddress"><![CDATA[If you have any complain for any of the user. Then you can contact us & send email at <b>ism_security@gmail.com</b>]]></string>
    <string name="strBlockStudyMate">If you wish to block any studymate then add</string>
    <string name="strReceivedNotificationTag">Receive notification when you are tagged in any post</string>
    <string name="strLikeNotification">Send me notification for like</string>
    <string name="strCommentNotification">Send me notification for comment</string>
    <string name="strNoticeNotification">Send me notification when any notice is published</string>
    <string name="strAuthorNotification">Send me notification when any author has posted anything on timeline</string>
    <string name="strNotificationforAuthor">Notification for Author</string>
    <string name="strNotificationforCommentAndLike">Notification For Comment And Like</string>
    <string name="str_student_from">Student From </string>
    <string name="strAllowsViewersToViewMyContactInfo">Allow viewers to view my contact info</string>
    <string name="strAllowsViewersToViewMyBirthdate">Allow viewers to view my birthdate</string>
    <string name="strAllowsViewersToViewMyExamScores">Allow viewers to view my exams 7 scores</string>
    <string name="strSmsAlertsForAssignment">Send me sms alert when there is new assignment assigned</string>
    <string name="strSmsAlertForExamEvaluations">Send me sms alert when my exam evaluation is ready</string>
    <string name="strSmsAlertForConf">Send me sms alert when any cnference is scheduled</string>
    <string-array name="viewers_array">
        <item>Select</item>
        <item>Every One</item>
        <item>Studymates</item>
    </string-array>
    <string name="str_date_range">Date Range:</string>
    <string name="str_class_score">Class Score</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_head_mistress_remarks">Head Mistress Remarks:</string>
    <string name="str_class_mistress_remarks">Class Mistress Remarks:</string>
    <string name="str_respond_to_request">Respond to Request</string>
    <string name="respond_to_your">Respond to Your</string>
    <string name="str_tutorial">Tutorial</string>
    <string name="str_past">PAST</string>
    <string name="str_scheduled_date">Scheduled Date</string>
    <string name="str_ismrank">ISM Rank</string>
    <string name="str_group_name">Group Name</string>
    <string name="str_group_scores">Group Scores</string>
    <string name="str_group_rank">Group Rank</string>
    <string name="str_schedule_exam">Schedule Exam</string>
    <string name="str_freezeresult">Freeze Result</string>
    <string name="str_personal_info">PERSONAL INFORMATION</string>
    <string name="str_manage_credential">MANAGE CREDENTIAL</string>
    <string name="str_you_are_assigned_group">You are assigned group</string>
    <string name="str_you_have_to_schedule">,you have \n to schedule question for topic</string>
    <string name="strsearchstudymatess">Search Study Mates</string>
    <string name="no_internet">No Internet Connection Available...Please Try Again</string>
    <string name="strnetissue">No Internet Connection Available...Please Try Again</string>
    <string name="web_service_issue">Web service issue</string>
    <string name="title_forgot_password">Password will be sent to your email id.</string>
    <string name="processing">Processing</string>
    <string name="done">Done</string>
    <string name="msg_validation_country"><![CDATA[\n> Please select your country.]]></string>
    <string name="msg_validation_state"><![CDATA[\n> Please select your state.]]></string>
    <string name="msg_validation_city"><![CDATA[\n> Please select your city.]]></string>
    <string name="msg_validation_gender"><![CDATA[\n> Please select your gender.]]></string>
    <string name="msg_validaton_dob"><![CDATA[\n> Please set your date of birth.]]></string>
    <string name="msg_wrong_current_pwd">Wrong current password.</string>
    <string name="registration_failed">Registration failed</string>
    <string name="msg_email_exists">Email id already exists.</string>
    <string name="msg_username_exists">Username already exists.</string>
    <string name="msg_wrong_username_password">Username or Password is wrong!</string>
    <string name="straverage_score">Average Score</string>
    <string name="stractivity">Activity</string>
    <string name="strexam">Exam</string>
    <string name="strassignmentinfo">Assignment Information</string>
    <string name="strassignmentname">Assignment Name</string>
    <string name="strcoursename">Course Name</string>
    <string name="strsave">Save</string>
    <string name="strsubject">Subject</string>
    <string name="strsubmissiondate">Submission Date</string>
    <string name="strtopic">Topic</string>
    <string name="strtopics">Topics</string>
    <string name="msg_validation_set_topic">\nPlease select your subject topic.</string>
    <string name="msg_validation_add_text_rich_editor">\nPlease set the assignment.</string>
    <string name="msg_validation_set_classroom">\nPlease select your classroom.</string>
    <string name="msg_validation_set_subject">\nPlease select your subject.</string>
    <string name="msg_validation_set_passingpercent">\nPlease select passing percent</string>
    <string name="msg_validation_set_exam_name">\nPlease select exam name</string>
    <string name="msg_validation_set_exam_mode">\nPlease select exam mode</string>
    <string name="msg_validation_set_exam_duration">\nPlease select exam duration</string>
    <string name="msg_validation_declare_results">\nPlease select any declare result option.</string>
    <string name="msg_validation_negative_marking">\nPlease select any negative marking option.</string>
    <string name="msg_validation_random_question">\nPlease select any random question option.</string>
    <string name="msg_validation_use_score_from_questions">\nPlease select use score from question option.</string>
    <string name="strexamassessor">Exam Assessor</string>
    <string name="strnoassessor">No Assessor</string>
    <string name="strexamcategory">Exam Category</string>
    <string name="strexamtopic">Exam Topic</string>
    <string name="streditexam">Edit</string>
    <string name="strnone">None</string>
    <string name="str_classwall">Classwall</string>
    <string name="str_notes">Notes</string>
    <string name="str_quiz">Quiz</string>
    <string name="str_markscript">Mark Script</string>
    <string name="str_results">Results</string>
    <string name="str_add">Add</string>
    <string name="str_progressReport">Progress Report</string>
    <string name="strassignmentinformation">Assignment Information</string>
    <string name="strpersonalinformation">Personal Information</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Enter Password</string>
    <string name="strrememberme">Remember Me</string>
    <string name="strlogin">LOGIN</string>
    <string name="strforgotpwd"><u>Forgot Password</u></string>
    <string name="strdonothavecredentials">Do Not Have Credentials, </string>
    <string name="strclickhereu"><u>Click Here</u></string>
    <string name="stremailaddress">Email Address</string>
    <string name="strClass_colon">Class :</string>
    <string name="strassignmentno">Assignment No</string>
    <string name="strtest">test</string>
    <string name="strassignmentdate">Assignment date</string>
    <string name="strquestionpallete">Question Palette</string>
    <string name="strlegend">Legend :</string>
    <string name="strassessed">Assessed</string>
    <string name="strunasssessed">Unassessed</string>
    <string name="strnotattemted">Not Attempted</string>
</resources>