<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_teacher_login">

    <LinearLayout
        android:layout_width="500sp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/d60sp"
        android:layout_marginLeft="@dimen/d60sp"
        android:layout_marginRight="@dimen/d60sp"
        android:layout_marginTop="@dimen/d50sp"
        android:background="@drawable/background_transparent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d40sp"
            android:layout_marginTop="@dimen/d40sp"
            android:src="@drawable/ism_title_blue" />

        <EditText
            android:id="@+id/et_teacher_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d50dp"
            android:layout_marginRight="@dimen/d50dp"
            android:layout_marginTop="@dimen/d30dp"
            android:background="@drawable/background_edittext_teacher"
            android:gravity="center"
            android:hint="Enter Username"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            android:textSize="@dimen/d20sp" />

        <EditText
            android:id="@+id/et_teacher_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d50dp"
            android:layout_marginRight="@dimen/d50dp"
            android:layout_marginTop="@dimen/d20dp"
            android:background="@drawable/background_edittext_teacher"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            android:textSize="@dimen/d20sp" />

        <CheckBox
            android:id="@+id/chk_rememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d20sp"
            android:button="@drawable/custom_checkbox_blue"
            android:checked="true"
            android:padding="@dimen/d10sp"
            android:text="@string/strrememberme"
            android:textColor="@color/color_gray1"
            android:textSize="@dimen/d18sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d20sp"
            android:background="@drawable/backgroundbtnlogin"
            android:drawablePadding="@dimen/d10sp"
            android:drawableRight="@drawable/arrow"
            android:gravity="center"
            android:paddingLeft="@dimen/d90sp"
            android:paddingRight="@dimen/d90sp"
            android:text="@string/strlogin"
            android:textColor="@color/color_white"
            android:textSize="@dimen/d20sp" />

        <TextView
            android:id="@+id/txt_forgotpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d70sp"
            android:gravity="center"
            android:text="@string/strforgotpwd"
            android:textColor="@color/color_black"
            android:textSize="@dimen/d18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_donothave_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/strdonothavecredentials"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/d18sp" />

            <TextView
                android:id="@+id/txt_clickhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="@dimen/d5sp"
                android:text="@string/strclickhereu"
                android:textColor="@color/color_black"
                android:textSize="@dimen/d18sp" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
