<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.ism.commonsource.view.ActionProcessButton
        android:id="@+id/prog_request_schoolinfo"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="@dimen/d15dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d20dp"
        android:layout_marginRight="@dimen/d20dp"
        android:layout_marginTop="@dimen/d20dp"
        android:background="@drawable/selector"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/et_email"
        android:padding="20dp"
        android:textSize="@dimen/controller_top_menu_text_size" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d20dp"
        android:layout_marginRight="@dimen/d20dp"
        android:layout_marginTop="@dimen/d20dp"
        android:background="@drawable/selector"
        android:hint="@string/stremailaddress"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/et_message"
        android:padding="20dp"
        android:textSize="@dimen/controller_top_menu_text_size" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d20dp"
        android:background="@drawable/selector"
        android:gravity="start"
        android:hint="@string/last_name"
        android:inputType="textMultiLine"
        android:lines="5"
        android:padding="20dp"
        android:textSize="@dimen/controller_top_menu_text_size" />

</LinearLayout>