<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_bg_trial_exam_details"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/d10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_objective_assignment_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strsubject"
                    android:textColor="@color/color_gray"
                    android:textSize="@dimen/d18dp" />

                <TextView
                    android:id="@+id/tv_objective_assignment_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d5dp"
                    android:text="@string/strClass_colon"
                    android:textColor="@color/color_gray"
                    android:textSize="@dimen/d18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_objective_assignment_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strassignmentno"
                    android:textColor="@color/color_gray"
                    android:textSize="@dimen/d18dp" />

                <TextView
                    android:id="@+id/tv_objective_assignment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d5dp"
                    android:text="@string/strtest"
                    android:textAllCaps="true"
                    android:textColor="@color/color_red"
                    android:textSize="@dimen/d20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_edit_exam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_edit_question" />

                    <ImageView
                        android:id="@+id/img_copy_exam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_copy_question" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_objective_assignment_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strassignmentdate"
                    android:textColor="@color/color_gray"
                    android:textSize="@dimen/d18dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_objective_assignment_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d5dp"
                    android:text="@string/strtest"
                    android:textColor="@color/color_violet_assignment"
                    android:textSize="@dimen/d18dp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_no_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/no_questions_available"
                android:textSize="@dimen/d22sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_getObjective_assignment_questionslist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
